--- a/Borlay.Repositories/Borlay.Repositories/Borlay.Repositories.csproj
+++ b/Borlay.Repositories/Borlay.Repositories/Borlay.Repositories.csproj
@@ -10,11 +10,19 @@
     <RepositoryType>git</RepositoryType>
     <PackageTags>Repository KV key value</PackageTags>
     <Copyright>Paulius Kanoverskis</Copyright>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Borlay.Arrays" Version="1.0.0" />
     <PackageReference Include="Borlay.Handling" Version="1.0.16" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
